src/objects/Apttus_Proposal__Proposal_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>CPQ_Market_Model__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flexible Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_NPT_SI_TYPE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CPQ_NPT_SI_TYPE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Net_Price_Inc_Trans__c</fullName>
        <description>Reference to the net price including transport from line item</description>
        <inlineHelpText>Reference to the net price including transport from line item</inlineHelpText>
        <label>Net Price (Incl Transport)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Network_Activity__c</fullName>
        <description>Used in Surround CPQ/QTC output templates</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used in Surround CPQ/QTC output templates</inlineHelpText>
        <label>Network Activity</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Normalization_Adjustment__c</fullName>
        <description>Captures normalization value applied</description>
        <label>Normalization Adjustment</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Parent_Check_for_Site_Model__c</fullName>
        <description>Using this in template to identify the child records of Site Model and display accordingly in template</description>
        <formula>IF( CPQ_Read_Option_value_for_Template__c != null, IF( ISPICKVAL( Apttus_Proposal__Product__r.CPQ_Secondary_Category__c , &apos;Site Model&apos;) , true,false) ,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Using this in template to identify the child records of Site Model and display accordingly  in template</inlineHelpText>
        <label>Parent Check for Site Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Parent_Check_for_Solution_Model__c</fullName>
        <description>Using this in template to identify the child records of Solution Model and display accordingly in template</description>
        <formula>IF( CPQ_Read_Option_value_for_Template__c != null, IF( ISPICKVAL( Apttus_Proposal__Product__r.CPQ_Secondary_Category__c , &apos;Solution Model&apos;) , true,false) ,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Using this in template to identify the child records of Solution Model and display accordingly in template</inlineHelpText>
        <label>Parent Check for Solution Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Parent_Secondary_Category__c</fullName>
        <description>Populates the Secondary Category from Parent product.</description>
        <formula>IF( NOT(ISBLANK(Apttus_QPConfig__OptionId__c)),TEXT(Apttus_Proposal__Product__r.CPQ_Secondary_Category__c),&apos;&apos;)</formula>
        <inlineHelpText>Populates the Secondary Category from Parent product.</inlineHelpText>
        <label>Parent Secondary Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Price_Class__c</fullName>
        <description>Reference to the price class from line item</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the price class from line item</inlineHelpText>
        <label>Price Class</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Product_Description__c</fullName>
        <description>Reference to the custom service description (name) as provided by the sales rep for Surround for Service products</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the custom service description (name) as provided by the sales rep for Surround for Service products</inlineHelpText>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Read_Option_value_for_Template__c</fullName>
        <description>This is used to read the option value and display/restrict in template</description>
        <formula>Apttus_QPConfig__OptionId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is used to read the option value and display/restrict in template</inlineHelpText>
        <label>Read Option value for Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Rollup_Group_Num__c</fullName>
        <description>Reference to the RollUp Group Num from line item</description>
        <inlineHelpText>Reference to the RollUp Group Num from line item</inlineHelpText>
        <label>RollUp Group Num</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Rollup_Group_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reference to the RollUp Group Parent from line item</description>
        <inlineHelpText>Reference to the RollUp Group Parent from line item</inlineHelpText>
        <label>Rollup Group Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_SSF_Adjust_Type_Class__c</fullName>
        <description>Reference to the adjusttype from the SSF BOM upload for Surround. API Name twinning from line item</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the adjusttype from the SSF BOM upload for Surround. API Name twinning from line item</inlineHelpText>
        <label>SSF Adjust Type Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_SSF_Billing_Rule_Code__c</fullName>
        <description>Reference to the billing rule code for SSF corresponding to billing rule ID</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the billing rule code for SSF corresponding to billing rule ID</inlineHelpText>
        <label>SSF Billing Rule Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_SSF_Billing_Rule_Description__c</fullName>
        <description>Reference to the billing Description corresponding to the SSF billing rule code</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the billing Description corresponding to the SSF billing rule code</inlineHelpText>
        <label>SSF Billing Rule Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_SSF_Billing_Rule_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Selected by sales rep and refers to the ID of the billing rule code</description>
        <inlineHelpText>Selected by sales rep and refers to the ID of the billing rule code</inlineHelpText>
        <label>SSF Billing Rule ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CPQ_SSFBillingRuleMaster__c.CPQ_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CPQ_SSFBillingRuleMaster__c</referenceTo>
        <relationshipLabel>Proposal Line Items</relationshipLabel>
        <relationshipName>Proposal_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQ_SSF_Discount_Percent__c</fullName>
        <description>Reference to the unitdisc (recurring) or onetimedisc (onetime) from the SSF BOM upload for Surround</description>
        <inlineHelpText>Reference to the unitdisc (recurring) or onetimedisc (onetime) from the SSF BOM upload for Surround</inlineHelpText>
        <label>SSF Discount %</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_SSF_Discounted_Base_Price__c</fullName>
        <description>Reference to the tss_discUnitRate (recurring) or disconetimecharge (onetime) from the SSF BOM upload for Surround. API Name twinning from line item</description>
        <inlineHelpText>Reference to the tss_discUnitRate (recurring) or disconetimecharge (onetime) from the SSF BOM upload for Surround. API Name twinning from line item</inlineHelpText>
        <label>SSF Discounted Base Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_SSF_Group_ID__c</fullName>
        <description>Reference to the group ID from the SSF BOM upload for Surround. API Name twinning from line item</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the group ID from the SSF BOM upload for Surround. API Name twinning from line item</inlineHelpText>
        <label>SSF Group ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_SSF_Permission__c</fullName>
        <description>Reference to SSF Permitted from product record.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to SSF Permitted from product record.</inlineHelpText>
        <label>SSF Permission</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_SSF_Price_Class__c</fullName>
        <description>Reference to the priceclass from the SSF BOM upload for Surround</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the priceclass from the SSF BOM upload for Surround</inlineHelpText>
        <label>SSF Price Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_SSF_Product_Manufacturer__c</fullName>
        <description>Reference to the tss_productManufacturer from the SSF BOM upload for Surround. API Name twinning from line item</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the tss_productManufacturer from the SSF BOM upload for Surround. API Name twinning from line item</inlineHelpText>
        <label>SSF Product Manufacturer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_SSF_Product_Name__c</fullName>
        <description>Reference to the tss_productname from the SSF BOM upload for Surround. API Name twinning from line item</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the tss_productname from the SSF BOM upload for Surround. API Name twinning from line item</inlineHelpText>
        <label>SSF Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_SSF_Product_OI_Desc__c</fullName>
        <description>Reference to the tss_productOIDescription from the SSF BOM upload for Surround. API Name twinning from line item</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the tss_productOIDescription from the SSF BOM upload for Surround. API Name twinning from line item</inlineHelpText>
        <label>SSF Product OI Description</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_SSF_Product_OI__c</fullName>
        <description>Reference to the tss_productoi from the SSF BOM upload for Surround. API Name twinning from line item</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the tss_productoi from the SSF BOM upload for Surround. API Name twinning from line item</inlineHelpText>
        <label>SSF Product OI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Secondary_Category__c</fullName>
        <description>Reference to secondary category for the product. API Name twinning from line item</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to secondary category for the product. API Name twinning from line item</inlineHelpText>
        <label>Secondary Category</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Service_Rollup_Price__c</fullName>
        <description>Calculates the Price for service rollup group parent</description>
        <inlineHelpText>Calculates the Price for service rollup group parent</inlineHelpText>
        <label>Service Rollup Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Service_Rollup_Quantity__c</fullName>
        <description>Calculates the quantity for service rollup group parent</description>
        <inlineHelpText>Calculates the quantity for service rollup group parent</inlineHelpText>
        <label>Service Rollup Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Sub_Heading__c</fullName>
        <description>Used in Surround CPQ/QTC output templates.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used in Surround CPQ/QTC output templates.</inlineHelpText>
        <label>Sub Heading</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_T_L__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Surround CPQ/QTC output templates</description>
        <inlineHelpText>Used in Surround CPQ/QTC output templates</inlineHelpText>
        <label>T/L</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_T_L_for_display__c</fullName>
        <description>Calculated. Used on QTC NCQ template for Services Price Detail Sheet</description>
        <formula>If (CPQ_T_L__c = True,&apos;Y&apos;,&apos;N&apos;)</formula>
        <inlineHelpText>Calculated. Used on QTC NCQ template for Services Price Detail Sheet</inlineHelpText>
        <label>T/L for display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Transport_Price__c</fullName>
        <description>Reference to the transport price from line item</description>
        <inlineHelpText>Reference to the transport price from line item</inlineHelpText>
        <label>Transport Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Uploaded_via_SSF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reference to the Uploaded via SSF? from line item</description>
        <inlineHelpText>Reference to the Uploaded via SSF? from line item</inlineHelpText>
        <label>Uploaded via SSF?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Work_Center__c</fullName>
        <description>Used in Surround CPQ/QTC output templates</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used in Surround CPQ/QTC output templates</inlineHelpText>
        <label>Work Center</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration__c</fullName>
        <formula>IF(TEXT(Apttus_QPConfig__LineType__c) = &apos;Option&apos;,&apos;Cart Seq# &apos; +TEXT(Apttus_QPConfig__DerivedFromId__r.Apttus_Config2__LineSequence__c)+&apos;: &apos;+Apttus_Proposal__Product__r.Name,&apos;Standalone&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configuration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Product_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom Product Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Product_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Price_List__c</fullName>
        <formula>IF (
Apttus_QPConfig__PriceListId__c &lt;&gt;  Apttus_QPConfig__PriceListItemId__r.Apttus_Config2__PriceListId__c ,
true,
false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Price List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DS_Grouping_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Grouping</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_Product_TechnicalInfo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Technical Info Level1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DS_Product_Technical_Info_Level2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Technical Info Level2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EPT_Site_Quantity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EPT Site Quantity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EPT_Sites__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EPT Sites</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Equivalent_Price__c</fullName>
        <formula>if(OR(ISBLANK(Apttus_QPConfig__DerivedFromId__r.Equivalent_Price__c), Apttus_QPConfig__DerivedFromId__r.Equivalent_Price__c = 0),
	Apttus_QPConfig__NetUnitPrice__c, Apttus_QPConfig__DerivedFromId__r.Equivalent_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equivalent Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Description__c</fullName>
        <description>This formula is for capturing description from price list item for SFR</description>
        <formula>Apttus_QPConfig__PriceListItemId__r.Apttus_Config2__Description__c</formula>
        <label>External Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Reference__c</fullName>
        <description>This formula field is used to capture Contract item number from price list item</description>
        <formula>Apttus_QPConfig__PriceListItemId__r.Apttus_Config2__ContractItemNumber__c</formula>
        <label>External Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flexible_group_code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flexible group code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRP_Value__c</fullName>
        <label>IRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISP_Per_Unit__c</fullName>
        <formula>Apttus_QPConfig__NetPrice__c/Apttus_QPConfig__Quantity2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISP Per Unit</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invalid_Maintenance_type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invalid Maintenance type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Dummy_Bundle__c</fullName>
        <formula>IF(TEXT(Apttus_QPConfig__LineType__c)==&quot;Product/Service&quot;, 

 TEXT(Apttus_Proposal__Product__r.Is_Dummy_Bundle_CPQ__c)  , 

 TEXT(Apttus_QPConfig__OptionId__r.Is_Dummy_Bundle_CPQ__c)

 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Dummy Bundle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Dummy_Product__c</fullName>
        <formula>IF(TEXT(Apttus_QPConfig__LineType__c)==&quot;Product/Service&quot;, Apttus_Proposal__Product__r.Is_Dummy_Product__c , Apttus_QPConfig__OptionId__r.Is_Dummy_Product__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Dummy Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Type_From_CAT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Item Type From CAT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <description>Item Type from Line Item</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Item Type from Line Item</inlineHelpText>
        <label>Item Type (from LI)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Option_Standalone_Price__c</fullName>
        <label>Net Option Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Price_two_decimal__c</fullName>
        <formula>Apttus_QPConfig__NetPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price (two decimal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_years_of_Maintenance__c</fullName>
        <formula>Text(Apttus_Proposal__Proposal__r.NokiaCPQ_No_of_Years__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of years of Maintenance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQPortfolio_Package_Code__c</fullName>
        <formula>IF(TEXT(Apttus_QPConfig__LineType__c)==&quot;Product/Service&quot;,Apttus_Proposal__Product__r.NokiaCPQ_Portfolio_Package_Code__c
, Apttus_QPConfig__OptionId__r.NokiaCPQ_Portfolio_Package_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio Package Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Account_Id__c</fullName>
        <formula>Apttus_Proposal__Proposal__r.Apttus_Proposal__Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Alias__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Alias_fromPAVE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Configuration_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Configuration Type</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_ExtendedAdvance_NP__c</fullName>
        <label>Extended NP</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_ExtendedPrice_CNP__c</fullName>
        <label>Extended CNP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_ExtendedPrice_CUP__c</fullName>
        <label>Extended CUP 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Extended_CLP_2__c</fullName>
        <label>Extended CLP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Extended_CLP__c</fullName>
        <label>Extended CLP 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Extended_CNP_Without_LSD__c</fullName>
        <label>Extended CNP Before LSD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Extended_CUP_2__c</fullName>
        <label>Extended CUP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Extended_Cost__c</fullName>
        <label>Extended Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Extended_IRP2__c</fullName>
        <label>Extended IRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Extended_IRP__c</fullName>
        <label>Extended IRP 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Extended_List_Price__c</fullName>
        <description>calculates list price * quantity</description>
        <formula>IF(ISPICKVAL( Apttus_QPConfig__ChargeType__c ,&apos;Standard Price&apos; ), Apttus_QPConfig__Quantity2__c *  Apttus_QPConfig__ListPrice__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_IsArcadiaBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSP Export NSW</description>
        <label>IsArcadiaBundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_IsOptions__c</fullName>
        <formula>IF(TEXT(Apttus_QPConfig__LineType__c)==&quot;Product/Service&quot;, TEXT(Apttus_Proposal__Product__r.Apttus_Config2__ConfigurationType__c) ,  TEXT(Apttus_QPConfig__OptionId__r.Apttus_Config2__ConfigurationType__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsOptions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Is_CLP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the prices are fetched from Contracted CLP or not.</description>
        <label>Is CLP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Is_Direct_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field helps to identify the Arcadia and direct options in the configurator</description>
        <label>Is Direct Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Item_Type__c</fullName>
        <formula>IF( Apttus_Proposal__Product__r.ProductCode =&apos;CUSTPROD001&apos;,&apos;Software&apos;,IF(TEXT(Apttus_QPConfig__LineType__c)==&quot;Product/Service&quot;,  TEXT(Apttus_Proposal__Product__r.NokiaCPQ_Item_Type__c) ,  TEXT(Apttus_QPConfig__OptionId__r.NokiaCPQ_Item_Type__c ) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Light_Color__c</fullName>
        <description>Field Created to set guidance color from PCB</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Deal Guidance Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_LumpSumDiscount__c</fullName>
        <formula>(Apttus_Proposal__Proposal__r.NokiaCPQ_Quote_CAD__c/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LumpSumDiscount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_MPW_Uplift__c</fullName>
        <description>Storing MPW Uplift value used for Maintenance calculations</description>
        <formula>1+( $CustomMetadata.MPW_Maintenance_Uplift__mdt.record1.Care_Project_Management__c + $CustomMetadata.MPW_Maintenance_Uplift__mdt.record1.Global_Service__c + $CustomMetadata.MPW_Maintenance_Uplift__mdt.record1.Solution_Support__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MPW Uplift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Maint_Yr1_Base_Price__c</fullName>
        <label>NokiaCPQ Maint Yr1 Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Maint_Yr1_Extended_Price__c</fullName>
        <label>NokiaCPQ Maint Yr1 Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Maint_Yr2_Base_Price__c</fullName>
        <label>NokiaCPQ_Maint_Yr2_Base_Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Maint_Yr2_Extended_Price__c</fullName>
        <label>NokiaCPQ Maint Yr2 Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_MarketPrice__c</fullName>
        <label>MarketPrice</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Net_Price__c</fullName>
        <description>Net Price used by Indirect team to show on Quotes related list</description>
        <formula>Apttus_QPConfig__NetPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended CLP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Opportunity_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>NokiaCPQ_Site__c</referenceTo>
        <relationshipLabel>Proposal Line Items</relationshipLabel>
        <relationshipName>Proposal_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Parent_Bundle_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Product Name</label>
        <length>245</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Parent_Product__c</fullName>
        <formula>IF(TEXT(Apttus_QPConfig__LineType__c) = &apos;Option&apos;,&apos;Item Seq# &apos; +TEXT(Apttus_QPConfig__DerivedFromId__r.Apttus_Config2__LineSequence__c)+&apos;: &apos;+Apttus_Proposal__Product__r.Name,&apos;Standalone&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Partner_Price__c</fullName>
        <label>Unitary CLP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Price_List__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Price List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Product_Category__c</fullName>
        <formula>if(is_Custom_Product__c == true , &quot;Custom Product &quot;,
IF(TEXT(Apttus_QPConfig__LineType__c) =&quot;Product/Service&quot;, TEXT(Apttus_Proposal__Product__r.NokiaCPQ_Category__c),  TEXT(Apttus_QPConfig__OptionId__r.NokiaCPQ_Category__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Product_Description__c</fullName>
        <formula>IF(TEXT( Apttus_QPConfig__LineType__c )==&quot;Product/Service&quot;,  Apttus_Proposal__Product__r.Description  , Apttus_QPConfig__OptionId__r.Description )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Product_Name__c</fullName>
        <formula>if(is_Custom_Product__c == true , Custom_Product_Name__c,
IF(TEXT(Apttus_QPConfig__LineType__c )= &quot;Product/Service&quot;,Apttus_Proposal__Product__r.Name , Apttus_QPConfig__OptionId__r.Name ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Product_Type__c</fullName>
        <description>The field is used to store the Product type such as access points, controller etc.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Quantity__c</fullName>
        <formula>Apttus_QPConfig__Quantity2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Rationale_Of_Adjustment__c</fullName>
        <description>Req 6001: Rationale for adjustment given on cart</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Discount Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>